# PyUruNet

./: .gitignore
_urunet/: CMakeLists.txt  module.cpp  rc4.cpp  sha.cpp  test.cpp  urunet.h
pyurunet/: __init__.py  authcli.py  filecli.py  gatecli.py
pyurunet/_netio/: __init__.py  authstructs.py  constants.py  cryptio.py  errors.py  fields.py  filestructs.py  msg.py
